--- a/app/globals.css
+++ b/app/globals.css
@@ -144,6 +144,7 @@
   cursor: pointer;
   outline-offset: 4px;
 }
+
 .front {
   display: block;
   /* padding: 12px 12px; */
@@ -151,6 +152,20 @@
   /* background: hsl(179deg 56% 58%); */
   transform: translateY(-6px);
 }
+
 .pushable:active .front {
   transform: translateY(-2px);
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
 }
